--- a/Build.props
+++ b/Build.props
@@ -2,7 +2,7 @@
     <PropertyGroup>
         <!-- IMPORTANT: Should point to <Barotrauma_Install>\LocalMods\<MyModName>\ -->
         <!-- IMPORTANT: ModDeplyDir Path must end with '\' -->
-        <ModDeployDir>C:\SHORT_PATH_REQ\LuaCsForBarotrauma\Deploy\bin\content\Windows\Client\LocalMods\DockyardTools\</ModDeployDir>
+        <ModDeployDir>..\Release\</ModDeployDir>
         <!-- IMPORTANT: Avoid the use of special (IE: / : ; , \ < > ?) (periods "." are good) and non-english characters in the AssemblyName.-->
         <AssemblyName>DockyardTools</AssemblyName>
     </PropertyGroup>
